# projectM-rs

./: .gitignore  Cargo.toml  HANDOFF.md  NOTICE  README.md  ROADMAP.md  macos-quickstart.md
crates/pm-app/: Cargo.toml
crates/pm-app/src/: audio.rs  hud.rs  main.rs  prefs.rs  screenshot.rs
crates/pm-audio/: Cargo.toml
crates/pm-audio/src/: aligner.rs  constants.rs  fft.rs  lib.rs  loudness.rs  pcm.rs
crates/pm-audio/tests/: audio.rs
crates/pm-core/: Cargo.toml
crates/pm-core/examples/: bench_render.rs  matrix_visual.rs  render_preset.rs  snapshot.rs  transition_demo.rs  warp_demo.rs
crates/pm-core/src/: blur.rs  border.rs  colored_line.rs  composite.rs  crossfade.rs  lib.rs  md_uniforms.rs  motion_vectors.rs  noise.rs  player.rs  preset_composite.rs  preset_warp.rs  textured_shape.rs  warp_mesh.rs  warp_render.rs  waveform.rs  waveform_render.rs
crates/pm-core/tests/: player.rs  warp.rs
crates/pm-eval/: Cargo.toml
crates/pm-eval/src/: ast.rs  compile.rs  interp.rs  lexer.rs  lib.rs  parser.rs
crates/pm-eval/tests/: eval.rs
crates/pm-format/: Cargo.toml
crates/pm-format/examples/: convert.rs  roundtrip_corpus.rs
crates/pm-format/src/: lib.rs  milk.rs  pmp.rs
crates/pm-format/tests/: roundtrip.rs
crates/pm-glsl/: Cargo.toml
crates/pm-glsl/src/: controls.rs  lib.rs  prelude.rs
crates/pm-midi/: Cargo.toml
crates/pm-midi/src/: lib.rs
crates/pm-params/: Cargo.toml
crates/pm-params/src/: clock.rs  lfo.rs  lib.rs  param.rs  tempo.rs
crates/pm-preset/: Cargo.toml
crates/pm-preset/examples/: bench_eval.rs  bucket_f_drill.rs  bucket_overlap.rs  bucket_subgroups.rs  compat_report.rs  dump_shader.rs  invalid_binary_kinds.rs  matrix_survey.rs  parse_buckets.rs  parser_drill.rs  shader_report.rs  store_drill.rs  undef_idents.rs  valid_list.rs  validate_drill.rs  validate_kinds.rs
crates/pm-preset/src/: custom_shape.rs  custom_waveform.rs  error.rs  lib.rs  parser.rs  per_frame.rs  per_pixel.rs  preset_shader.rs  state.rs
crates/pm-preset/tests/: preset.rs  shader.rs
crates/pm-render/: Cargo.toml
crates/pm-render/examples/: screenshot.rs
crates/pm-render/src/: blit.rs  context.rs  framebuffer.rs  lib.rs  mesh.rs  pass.rs  readback.rs  render_context.rs  texture.rs
crates/pm-render/tests/: render.rs
crates/pm-scene/: Cargo.toml
crates/pm-scene/src/: lib.rs
crates/pm-shader/: Cargo.toml
crates/pm-shader/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  preprocess.rs
crates/pm-shader/tests/: parse.rs  translate.rs
crates/pm-web/: .gitignore  Cargo.toml
crates/pm-web-player/: .gitignore  Cargo.toml  server_nocache.py
crates/pm-web-player/src/: lib.rs
crates/pm-web-player/www/: index.html
crates/pm-web-vj/: Cargo.toml
crates/pm-web-vj/src/: compositor.rs  effects.wgsl  lib.rs  shader_project.rs
crates/pm-web/src/: blit.rs  compositor.rs  effects.rs  lib.rs  live_shader.rs  midi.rs  overlay.rs
crates/pm-web/www/: index.html
docs/: deployment.md  known-limitations.md  performance-baseline.md  phase10-library.md  pm-web-architecture.md  rc-iphone-checklist.md  release-checklist.md  release-notes-v0.10.0-beta.1-draft.md  security-review.md  versioning.md
scripts/: deploy-cloudflare-pages.sh  release-check.sh
scripts/lib/: deploy-verify.mjs  deploy-verify.test.mjs
tools/preset-pack/: .gitignore  README.md  pack.mjs
web/: .gitignore  README.md  index.html  output.html  package-lock.json  package.json  tsconfig.json  verify-audition.mjs  verify-browser.mjs  verify-content.mjs  verify-crossfader.mjs  verify-deck.mjs  verify-library.mjs  verify-pack.mjs  verify-perf-controls.mjs  verify-qualification.mjs  verify-soak.mjs  verify.mjs  vite.config.ts
web/public/__testpack__/: LICENSE  README.md  basic.ndjson  basic.ndjson.pack  manifest-badshard.json  manifest.json
web/src/: audio-worklet.js  audio.ts  capabilities.ts  controls.ts  effects-ui.ts  examples.ts  help.ts  layers.ts  library-browser.ts  library-panel.ts  main.ts  midi-ui.ts  midi.ts  multipass-examples.ts  output-window.ts  output.ts  performance.ts  projection-protocol.ts  projection.ts  shader-console.ts  share.ts  version-tag.test.mjs  version-tag.ts  version.ts
