[package]
name = "pm-audio"
description = "projectM audio analysis: PCM buffering, Milkdrop FFT, loudness/beat detection, waveform alignment"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "pm_audio"

# Dependency-free port of the bespoke Milkdrop FFT and analysis, so spectrum
# output is bit-for-bit comparable to the C++ original.
[dependencies]
