[package]
name = "pm-glsl"
description = "GLSL (Shadertoy-style + raw) → WGSL translation via naga, for the pm-web live shader console"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "pm_glsl"

[dependencies]
naga = { version = "29", features = ["glsl-in", "wgsl-out"] }
bytemuck = { version = "1", features = ["derive"] }
