[package]
name = "pm-midi"
description = "Platform-neutral Web-MIDI mapping model: message parsing, absolute/toggle/momentary/trigger mappings, range/invert/curve, pickup, and serialization. Pure logic, unit-tested on native."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "pm_midi"

[dependencies]
pm-params = { path = "../pm-params" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
