[package]
name = "pm-scene"
description = "Serializable layer/scene data model, blend math, and validation for the pm-web compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "pm_scene"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
